TEMP diagnostic: add display:block to date input to test inline-flex overflow fix

--- a/src/PostSale.css
+++ b/src/PostSale.css
@@ -347,6 +347,7 @@
   }
 
   .form-group input[type="date"] {
+    display: block;
     border: 3px solid red;
   }
 
